docs(spec): finalize Sol 0.1 procedural specification (#107)
Finalize the Sol 0.1 procedural specification and align it with the implemented Java/LLVM bootstrap compiler.

Document lexical syntax, expressions, scopes, functions, control flow, filesystem module discovery, injections, executable entry points, native execution, and the current procedural standard library.

Update the native toolchain specification for `sol run` and align semantic equality rules with the documented Sol 0.1 behavior by rejecting unsupported string comparisons before LLVM lowering.